--- a/README.rdoc
+++ b/README.rdoc
@@ -3,7 +3,8 @@
 == Installation
 
 # Add 'talent' to your Gemfile.
-# Run 'rails g badges:install'
+# Run 'rails g talent:install'
+# Run 'rails g talent MODEL_NAME'
 # Add 'grant_badges' to controllers where you want this behavior triggered.
 # Run 'rake db:migrate'
 
@@ -14,14 +15,14 @@ To run the test application inside this gem follow:
 
 # cd test/dummy
 # rails g talent:install
+# rails g talent user
 # rake db:drop ; rake db:create ; rake db:migrate ; rake db:seed
 # rails s
 
 
 == To-do list
 
-* Add has_many :badges, :through => :join_model to related models?
-* Migration should accept any model (not just 'user').
+* Unificar generators en 'rails g talent MODEL_NAME'.
 * Poder avisar cuando hay nuevas medallas (como un flag de notificado).
 * Poder meter la lógica de si aplica una medalla en un método del controlador
   (más bajo nivel).
