--- a/README.rdoc
+++ b/README.rdoc
@@ -54,7 +54,7 @@ To run the test application inside this gem follow:
 == To-do list
 
 * grep -r 'FIXME\|TODO' .
-* Error handling: inexistent badges? grant_on(nil_user)?
+* Error handling: inexistent badges? grant_to(nil_user)?
 * Testear con delayed_job:
     class GrantBadgesJob
       def perform
