--- a/README.rdoc
+++ b/README.rdoc
@@ -17,11 +17,7 @@
 * +controller+#+action+ string (similar to Rails routes)
 * :+badge+ for badge name
 * :+level+ for badge level
-* :+to+ can be:
-  * +related_user+ applies badge to the target object's related user
-    (+post+.+user+ for instance)
-  * +action_user+ (default) applies badge to the user who triggered the action
-    (+current_user+, also called "source")
+* :+to+: method name over target_object which obtains user to badge.
 * :+temporary+ (boolean): if the condition doesn't hold and the receiver had
   the badge, it gets removed. +false+ by default (badges are kept forever).
 * &+block+
@@ -53,6 +49,8 @@ To run the test application inside this gem follow:
 
 == To-do list
 
+* talent->merit conceptually is more coherent
+* :to is a method name, not a simple symbol.
 * grep -r 'FIXME\|TODO' .
 * Should allow more than one subject to badge (for example, users and lists are
   "talentable").
@@ -60,15 +58,25 @@ To run the test application inside this gem follow:
   on params[:value] on the controller).
 * Is it ok a RecordNotFound exception for non existent badge? Could
   grant_to(user) fail (user nil)?
-* Define whenever or cron syntax to test badges granting on background, instead
-  of on each action.
 * Can we avoid "grant_badges" call on controllers? Easy to forget, could be a design "smell".
 * Make fixtures for integration testing (now creating objects on test file!).
+
+=== Possible reorganization:
+Simplify installers and application code, rely more on the gem:
+* Sash model 1<->1 'talentable' app models
+* sashes(id, model_name, model_id)
+* Sash m<sashes_badges>n Badges
+* Rules could be defined on 'talentable' models.
+
+=== Features
+* Stars are given not because of a concrete action (first parameter not needed)
+    grant_on '?', :badge => 'stars', :value => 1 do |user|
+      user.badges.include?(Badge.where(:name => 'autobiographer').first) &&
+      user.photos.present?
+    end
+* Define whenever or cron syntax to test badges granting on background, instead
+  of on each action.
+* grant_on 'users#show', :badge => 'enthusiast', :if => { :enthusiast? => true }
+  (last parameter is an :if hash, not a block which evaluates to Hash)
 * Are controller#action strings always necessary? Feature: could be an API
   improvement.
-* Testear con delayed_job:
-    class GrantBadgesJob
-      def perform
-        ::TalentRules.new.check_new_actions
-      end
-    end
