--- a/README.rdoc
+++ b/README.rdoc
@@ -57,11 +57,11 @@ actions-triggered.
 
 == Examples
 
-    give 10.points, :on => [
+    score 10, :on => [
       'users#update'
     ]
 
-    give 20.points, :on => [
+    score 20, :on => [
       'comments#create',
       'photos#create'
     ]
