Merit points revamped.

--- a/README.rdoc
+++ b/README.rdoc
@@ -48,7 +48,8 @@ Define rules on +app/models/merit_badge_rules.rb+:
 = Defining point rules
 
 Points are a simple integer value which are given to "meritable" resources.
-They are given on actions-triggered.
+They are given on actions-triggered, either to the action user or to the
+method (or array of methods) defined in the +:to+ option.
 
 Define rules on +app/models/merit_point_rules.rb+:
 
@@ -57,6 +58,8 @@ Define rules on +app/models/merit_point_rules.rb+:
     score 10, :on => [
       'users#update'
     ]
+
+    score 15, :on => 'reviews#create', :to => [:reviewer, :reviewed]
 
     score 20, :on => [
       'comments#create',
@@ -116,6 +119,7 @@ To run the test application inside this gem follow:
 
 = To-do list
 
+* Test points granting with different options.
 * Ranking should not be badges, so .badges doesn't return them (2-stars shouldn't be badge).
 * grep -r 'FIXME\|TODO' .
 * :value parameter (for star voting for example) should be configurable (depends
