--- a/README.rdoc
+++ b/README.rdoc
@@ -26,10 +26,10 @@ Define rules on +app/models/merit_badge_rules.rb+:
 * :+badge+ for badge name
 * :+level+ for badge level
 * :+to+: method name over target_object which obtains user to badge.
-* :+temporary+ (boolean): if the condition doesn't hold and the receiver had
-  the badge, it gets removed. +false+ by default (badges are kept forever).
 * :+model_name+ (string): when controller's name differs from the model being
   worked (like RegistrationsController for User model).
+* :+temporary+ (boolean): if the condition doesn't hold and the receiver had
+  the badge, it gets removed. +false+ by default (badges are kept forever).
 * &+block+
   * empty (always grants)
   * a block which evaluates to boolean (recieves target object as parameter)
@@ -117,11 +117,11 @@ Added +had_errors+ boolean attribute to +merit_actions+ table.
 = Test application
 
 To run the test application inside this gem follow:
-1. cd test/dummy
-2. rails g merit:install
-3. rails g merit user
-4. rake db:migrate ; rake db:seed
-5. rails s
+  cd test/dummy
+  rails g merit:install
+  rails g merit user
+  rake db:migrate ; rake db:seed
+  rails s
 
 
 = To-do list
